WIP token verifier

--- a/data-plane/pom.xml
+++ b/data-plane/pom.xml
@@ -66,6 +66,7 @@
     <antlr.version>4.9.2
     </antlr.version> <!-- Overwritting quarkus's antlr version. Reminder: antlr4-maven-plugin,antlr4-runtime, antlr4 need to have the same version -->
     <palantirJavaFormat.version>2.38.0</palantirJavaFormat.version>
+    <jose4j.version>0.9.4</jose4j.version>
   </properties>
 
   <modules>
@@ -240,6 +241,12 @@
         <version>${jackson.version}</version>
         <type>pom</type>
         <scope>import</scope>
+      </dependency>
+
+      <dependency>
+        <groupId>org.bitbucket.b_c</groupId>
+        <artifactId>jose4j</artifactId>
+        <version>${jose4j.version}</version>
       </dependency>
 
       <!-- Logback -->
