--- a/data-plane/core/pom.xml
+++ b/data-plane/core/pom.xml
@@ -70,6 +70,11 @@
     </dependency>
 
     <dependency>
+      <groupId>org.bitbucket.b_c</groupId>
+      <artifactId>jose4j</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>io.opentelemetry</groupId>
       <artifactId>opentelemetry-api</artifactId>
     </dependency>
