Enable receiver and dispatcher Docker images for ppc64le architecture (#3644)

--- a/data-plane/pom.xml
+++ b/data-plane/pom.xml
@@ -470,6 +470,10 @@
                   <architecture>s390x</architecture>
                   <os>linux</os>
                 </platform>
+                <platform>
+                  <architecture>ppc64le</architecture>
+                  <os>linux</os>
+                </platform>
               </platforms>
             </from>
           </configuration>
