Align to the defaults, list all - for convenience (#3642)
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/test/experimental/features_config/features.yaml
+++ b/test/experimental/features_config/features.yaml
@@ -25,4 +25,8 @@ data:
   kreference-group: "disabled"
   delivery-retryafter: "disabled"
   delivery-timeout: "enabled"
+  kreference-mapping: "disabled"
   new-trigger-filters: "enabled"
+  transport-encryption: "disabled"
+  eventtype-auto-create: "disabled"
+  authentication-oidc: "disabled"
