:lipstick: Order features.yaml like the actual upstream file/src (#3656)
Signed-off-by: Matthias Wessendorf <mwessend@redhat.com>

--- a/test/config-transport-encryption/features.yaml
+++ b/test/config-transport-encryption/features.yaml
@@ -21,11 +21,11 @@ metadata:
     knative.dev/config-propagation: original
     knative.dev/config-category: eventing
 data:
-  authentication.oidc: "disabled"
+  kreference-group: "disabled"
   delivery-retryafter: "disabled"
   delivery-timeout: "enabled"
-  eventtype-auto-create: "disabled"
-  kreference-group: "disabled"
   kreference-mapping: "disabled"
   new-trigger-filters: "enabled"
   transport-encryption: "Strict"
+  eventtype-auto-create: "disabled"
+  authentication-oidc: "disabled"
