feat: remove yaml merge tag (#3654)

--- a/control-plane/config/eventing-kafka-broker/200-webhook/500-webhook.yaml
+++ b/control-plane/config/eventing-kafka-broker/200-webhook/500-webhook.yaml
@@ -100,7 +100,7 @@ spec:
             - name: profiling
               containerPort: 8008
 
-          readinessProbe: &probe
+          readinessProbe:
             periodSeconds: 1
             httpGet:
               scheme: HTTPS
@@ -109,7 +109,13 @@ spec:
                 - name: k-kubelet-probe
                   value: "webhook"
           livenessProbe:
-            <<: *probe
+            periodSeconds: 1
+            httpGet:
+              scheme: HTTPS
+              port: 8443
+              httpHeaders:
+                - name: k-kubelet-probe
+                  value: "webhook"
             initialDelaySeconds: 20
 
       # Our webhook should gracefully terminate by lame ducking first, set this to a sufficiently
